# Chip-8-Emulator

./: CMakeLists.txt  prog_list.txt
.github/workflows/: release.yml
src/: Chip8.hpp  Debugger.hpp  Key.hpp  KeyPressHandler.hpp  Keypad.hpp  Program.hpp  Programs.hpp  Registers.hpp  font.hpp  get_bits.hpp  main.cpp  main_menu.hpp  types.hpp
src/threads/: clock.hpp  window.hpp
